<resources>
    <string name="app_name">Money Manager</string>
    <string name="title_home">Home</string>
    <string name="title_wallet">Wallets</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>

    <string name="start_balance">Start balance</string>
    <string name="insert_start_balance">Please enter a start balance.</string>
    <string name="insert_name">Please enter a name.</string>
    <string name="insert_numbers">Please enter a valid amount.</string>
    <string name="name">Name</string>

    <string name="title_activity_wallet">Wallets</string>
    <string name="title_activity_recurring_transaction_new">Add Recurring Transaction</string>
    <string name="title_activity_wallet_new">Add Wallet</string>
    <string name="total" formatted="false">Total: %s</string>
    <string name="today">Today</string>
    <string-array name="currencies">
        <item>EUR</item>
        <item>USD</item>
    </string-array>
    <string name="add_wallet">Add Wallet</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_recurring_transaction">Add Recurring Transaction</string>

    <string name="title_activity_transaction_new">Add Transaction</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="note">Note</string>
    <string name="money_in">Incoming</string>
    <string name="money_out">Outgoing</string>
    <string name="money_trans">Transfer</string>

    <string name="dashboard">Dashboard</string>
    <string name="dashboard_quick_add">Quick Add</string>
    <string name="dashboard_quick_in">Incoming Transaction</string>
    <string name="dashboard_quick_out">Outgoing Transaction</string>
    <string name="dashboard_quick_trans">Transfer Transaction</string>
    <string name="dashboard_quick_recurring">Recurring Transaction</string>


</resources>
