<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subheader_quickadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:text="@string/dashboard_quick_add"
                android:textColor="@color/primaryColor" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/black12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/ll_incoming"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:elevation="1dp"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <ImageView
                        android:id="@+id/ic_incoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

                    <TextView
                        android:id="@+id/te_incoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/dashboard_quick_in"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <ImageView
                        android:id="@+id/ic_transfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_compare_arrows_black_24dp" />

                    <TextView
                        android:id="@+id/te_transfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/dashboard_quick_trans"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_outgoing"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <ImageView
                        android:id="@+id/ic_outgoing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

                    <TextView
                        android:id="@+id/te_outgoing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/dashboard_quick_out"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_recurring"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <ImageView
                        android:id="@+id/ic_recurring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_autorenew_black_24dp" />

                    <TextView
                        android:id="@+id/te_recurring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/dashboard_quick_recurring"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>