<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context="com.jtosti.moneymanager.ActivityWallet">


    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/placeSnackBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/fab_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                app:menu_colorNormal="@color/secondaryColor"
                app:menu_colorPressed="@color/secondaryDarkColor"
                app:menu_colorRipple="@color/secondaryLightColor"
                app:menu_icon="@drawable/ic_add_black_24dp"
                fab:icon="@drawable/ic_add_black_24dp">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wallet_black_24dp"
                    app:fab_colorNormal="@color/secondaryColor"
                    app:fab_colorPressed="@color/secondaryDarkColor"
                    app:fab_colorRipple="@color/secondaryLightColor"
                    app:fab_label="@string/add_wallet" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_recurring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_autorenew_black_24dp"
                    app:fab_colorNormal="@color/secondaryColor"
                    app:fab_colorPressed="@color/secondaryDarkColor"
                    app:fab_colorRipple="@color/secondaryLightColor"
                    app:fab_label="@string/add_recurring_transaction" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_compare_arrows_black_24dp"
                    app:fab_colorNormal="@color/secondaryColor"
                    app:fab_colorPressed="@color/secondaryDarkColor"
                    app:fab_colorRipple="@color/secondaryLightColor"
                    app:fab_label="@string/add_transaction" />
            </com.github.clans.fab.FloatingActionMenu>

        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/navigation" />


    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>
